# aria-focus

./: .gitignore  .prettierignore  .prettierrc  ASSETS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  public-beta.yml  public-release.yml  unsigned-release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.activity-review.conf.json  tauri.all-review.conf.json  tauri.conf.json  tauri.learning-review.conf.json  tauri.listening-test.conf.json  tauri.macos.conf.json  tauri.macos.release.conf.json  tauri.opus-listening-test.conf.json  tauri.review.conf.json
apps/desktop/src-tauri/assets/: music-studio-runtime-public-key.txt
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: brand_migration.rs  coordinator.rs  lib.rs  main.rs  music_studio.rs  pack_service.rs  preview_audio.rs  private_beta.rs  review_service.rs  studio_generation.rs
apps/desktop/src-tauri/src/music_studio/: preflight.rs  runtime_download.rs
apps/desktop/src/components/: AboutAriaFocus.test.tsx  AboutAriaFocus.tsx  ActivityArtwork.tsx  ActivitySelector.test.tsx  (+47 more)
content/evidence/: ace-step-1.5-terms-2026-07-11.md
content/plans/: activity-library-expansion-v1.json  activity-library-expansion-v2-repair-v1.json  activity-library-expansion-v2.json  activity-library-replacements-v1.json  blind-review-round1.json  creativity-multigenre-calibration-v1.json  deep-work-calibration-v1.json  deep-work-still-calibration-v2.json  learning-multigenre-calibration-v1.json  light-work-multigenre-calibration-v1.json  motivation-multigenre-calibration-v1.json
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: dsp.rs  lib.rs  media.rs  playback.rs  provenance.rs  source.rs  tone.rs
crates/audio-engine/src/backend/: cpal_output.rs  mod.rs
crates/audio-engine/tests/: decode_matrix.rs
crates/audio-engine/tests/fixtures/: flac_mono_44100.flac  flac_stereo_48000.flac  ogg_opus_stereo_48000.opus  provenance.md
crates/catalogue/: Cargo.toml
crates/catalogue/src/: import.rs  lib.rs  manifest.rs  selection.rs  tests.rs
crates/catalogue/tests/: zz_cover_replacement_validate.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: state_machine.rs
crates/music-studio-domain/: Cargo.toml
crates/music-studio-domain/src/: lib.rs  tests.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_activity_preferences.sql  0002_installed_catalogue.sql  0003_activity_timer_preferences.sql  0004_activity_genre_preferences.sql  0005_item_activity_feedback.sql  0006_owner_waived_bundled_private_beta.sql  0007_activity_mood_preferences.sql  0008_item_activity_enjoyment.sql  0009_master_volume.sql  0010_onboarding.sql  0011_session_history.sql  0012_music_studio_jobs.sql  0013_generated_local_catalogue.sql  0014_music_studio_job_artifacts.sql  0015_generated_local_customer_metadata.sql  0016_generated_local_customer_integrity.sql
crates/persistence/src/: lib.rs
docs/: architecture.md  audio-analyzer.md  audio-design.md  blind-review-round1.md  brainfm-feature-research.md  candidate-ledger.md  completion-audit.md  content-pack-format.md  content-pack-upgrades.md  content-production-plan.md  phase0-verification.md  phase1a-verification.md  phase1b1-verification.md  phase1b2a-verification.md  phase1b2b-verification.md  phase1c1-verification.md  phase1c2a-verification.md  product-spec.md  public-beta-release.md  public-release.md  releases.md  verification.md  windows-preflight.md
docs/adr/: 0001-phase0-audio-output-via-web-audio.md  0002-phase1a-native-cpal-playback.md  0003-phase1b1-local-activity-preferences.md  0004-phase1b2a-offline-content-packs.md  0005-phase1b2b-phase-aware-session-timers.md  0006-phase1c1-installed-content-playback.md  0007-per-activity-genre-selection.md  0008-per-track-focus-feedback.md  0009-native-portability-ci-foundation.md  0010-safe-startup-subsystem-recovery.md
release/: public-beta-assets.json  unsigned-library-assets.json
scripts/: build-opus-listening-test.ps1  build_public_library_archive.py  check_repository_hygiene.py  generate-icon.mjs  prepare-tauri-updater-config.cjs  stage-private-beta-pack.ps1  stage-quarantined-activity-review-candidates.ps1  stage-quarantined-learning-review-candidates.ps1  stage-quarantined-review-candidates.ps1  stage_public_library.py  test_build_public_library_archive.py  test_ci_workflow.py  test_issue_templates.py  test_public_beta_workflow.py  test_public_release_workflow.py  test_stage_public_library.py  test_verify_public_library.py  test_verify_release_tag.py  verify_public_library.py  verify_release_tag.py
tools/audio-analyzer/: Cargo.toml
tools/audio-analyzer/src/: lib.rs  main.rs
tools/candidate-ledger/: Cargo.toml
tools/candidate-ledger/src/: lib.rs  main.rs
tools/candidate-ledger/tests/fixtures/: sine-220hz-10s-44100hz-stereo.flac  sine-220hz-10s-48khz-mono.flac  sine-220hz-10s-48khz-stereo.flac
tools/content-ingest/: Cargo.toml
tools/content-ingest/src/: lib.rs  main.rs
tools/music-admin/: Cargo.toml  README.md
tools/music-admin/src/: main.rs
tools/music-generation/: README.md  bootstrap.ps1  build_local_test_library.py  build_replacement_library.py  convert_library_to_opus.py  make_activity_library_replacement_plan.py  music_pipeline.py  production.py  run-batch.ps1  test_convert_library_to_opus.py  test_music_pipeline.py  test_production.py
tools/music-studio-runtime/: README.md  build_runtime_distribution.py  build_runtime_package.py  studio_worker.py  test_build_runtime_distribution.py  test_build_runtime_package.py  test_studio_worker.py
(+16 files in other folders)
