[package]
name = "audio-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cpal = "0.15.3"
rubato = { version = "=4.0.0", default-features = false, features = ["fft_resampler"] }
opus2 = { version = "=0.4.0", default-features = false, features = ["backend-libopus", "bundled", "static"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "=0.10.8"
symphonia = { version = "=0.6.0", default-features = false, features = ["wav", "pcm", "flac", "mp3", "ogg"] }
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "=3.14.0"
