[package]
name = "catalogue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain = { workspace = true }
semver = "=1.0.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "=0.10.9"
tempfile = "=3.27.0"
thiserror = "2.0.11"
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
proptest = "=1.11.0"
