[package]
name = "music-studio-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
serde_json = "1.0.134"
