[package]
name = "persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain = { workspace = true }
music-studio-domain = { workspace = true }
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "=3.14.0"
