[package]
name = "audio-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ebur128 = "=0.1.10"
rustfft = "=6.4.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.134"
sha2 = "=0.10.8"
symphonia = { version = "=0.6.0", default-features = false, features = ["wav", "pcm", "flac", "mp3"] }
tempfile = "=3.14.0"
