[package]
name = "candidate-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
catalogue = { workspace = true }
domain = { workspace = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.134"
sha2 = "=0.10.8"
symphonia = { version = "=0.6.0", default-features = false, features = ["flac"] }
tempfile = "=3.14.0"
time = { version = "=0.3.37", features = ["parsing", "formatting"] }
thiserror = "=2.0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
