[package]
name = "content-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
catalogue = { workspace = true }
serde_json = "=1.0.134"
tempfile = "=3.14.0"
thiserror = "=2.0.11"
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
