[package]
name = "content-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
catalogue = { workspace = true }
serde_json = "=1.0.150"
tempfile = "=3.27.0"
thiserror = "=2.0.19"
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
