[package]
name = "music-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "x11"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.134"
audio-engine = { workspace = true }
sha2 = "0.10.8"
